tree-sitter-anima/grammar.js
    program: $ => repeat($._declaration),

    // ================================================================
    // Declarations
    // ================================================================

    _declaration: $ => choice(
      $.import_declaration,
      $.module_declaration,
      $.function_declaration,
      $.intent_declaration,
      $.evolving_declaration,
      $.fuzzy_declaration,
      $.entity_declaration,
      $.sealed_declaration,
      $.interface_declaration,
      $.type_alias,
      $.agent_declaration,
      $.feature_declaration,
      $.context_declaration,
      $.resource_declaration,
      $.protocol_declaration,
      $.diagnosable_declaration,
      $.val_declaration,
      $.var_declaration,
    ),

    // ======================== Imports & Modules =====================

    import_declaration: $ => seq(
      'import',
      '{',
      commaSep1($.identifier),
      '}',
      'from',
      $.string_literal,
      optional(seq('as', field('alias', $.identifier))),
    ),

    module_declaration: $ => seq(
      'module',
      field('name', choice($.identifier, $.qualified_identifier)),
    ),

    // ======================== Functions =============================

    function_declaration: $ => seq(
      repeat($.modifier),
      'fun',
      optional($.type_parameters),
      optional(seq(field('receiver', $._type), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('context_clause', $.context_clause)),
      field('body', choice($.block, seq('=', $._expression))),
    ),

    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')',
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    intent_declaration: $ => seq(
      repeat($.modifier),
      'intent',
      'fun',
      optional($.type_parameters),
      optional(seq(field('receiver', $._type), '.')),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('context_clause', $.context_clause)),
      field('body', $.intent_body),
    ),

    intent_body: $ => seq(
      '{',
      repeat($._intent_clause),
      '}',
    ),

    _intent_clause: $ => choice(
      $.ensure_clause,
      $.prefer_clause,
      $.avoid_clause,
      $.assume_clause,
      $.hint_clause,
      $.cost_clause,
      $.fallback_clause,
      $.adapt_clause,
      $.given_block,
      $._statement,
    ),

    ensure_clause: $ => seq('ensure', $.block),

    prefer_clause: $ => seq(
      'prefer',
      $.block,
      optional(seq('weight', $.float_literal)),
    ),

    hint_clause: $ => seq('hint', '(', $.string_template, ')'),

    fallback_clause: $ => seq('fallback', $.block),

    adapt_clause: $ => seq(
      'adapt',
      '<',
      field('error_type', $._type),
      '>',
      choice($.lambda_expression, $.block),
    ),

    // ======================== Evolving Functions ====================

    evolving_declaration: $ => seq(
      'evolving',
      repeat($.modifier),
      'intent',
      'fun',
      optional($.type_parameters),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
      optional(field('context_clause', $.context_clause)),
      '{',
      repeat($._intent_clause),
      optional($.strategy_block),
      optional($.evolve_block),
      '}',
    ),

    strategy_block: $ => seq('strategy', $.block),

    evolve_block: $ => seq(
      'evolve',
      '{',
      repeat($._evolve_clause),
      '}',
    ),

    _evolve_clause: $ => choice(
      $.fitness_block,
      $.allow_block,
      $.forbid_block,
      $.trigger_clause,
      $.rollback_clause,
      $.review_block,
    ),

    fitness_block: $ => seq(
      'fitness',
      '{',
      repeat($.fitness_metric),
      '}',
    ),

    fitness_metric: $ => seq(
      field('name', $.identifier),
      'weight',
      field('value', $.float_literal),
    ),

    allow_block: $ => seq(
      'allow',
      '{',
      repeat($.evolution_rule),
      '}',
    ),

    forbid_block: $ => seq(
      'forbid',
      '{',
      repeat($.evolution_rule),
      '}',
    ),

    evolution_rule: $ => seq(
      $.identifier,
      optional(seq('(', optional(commaSep1($._argument)), ')')),
    ),

    trigger_clause: $ => seq('triggerWhen', $.block),
    rollback_clause: $ => seq('rollbackWhen', $.block),

    agent_declaration: $ => seq(
      'agent',
      field('name', $.identifier),
      optional(seq(
        '(',
        optional(commaSep1(choice($.field_parameter, $.parameter))),
        ')',
      )),
      optional(seq(':', commaSep1($._type))),
      field('body', $.agent_body),
    ),

    agent_body: $ => seq(
      '{',
      repeat($._agent_section),
      '}',
    ),

    _agent_section: $ => choice(
      $.agent_context_section,
      $.tools_section,
      $.boundaries_section,
      $.team_section,
      $.evolving_declaration,
      $.intent_declaration,
      $.function_declaration,
      $.on_handler,
    ),

    agent_context_section: $ => seq(
      'context',
      '{',
      repeat($.field_declaration),
      '}',
    ),

    tools_section: $ => seq(
      'tools',
      '{',
      repeat($.tool_declaration),
      '}',
    ),

    tool_declaration: $ => seq(
      'fun',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(seq(':', field('return_type', $._type))),
    ),

    boundaries_section: $ => seq(
      'boundaries',
      '{',
      repeat($._boundary_rule),
      '}',
    ),

    _boundary_rule: $ => choice(
      $.boundary_assignment,
      $.can_block,
      $.cannot_block,
      $.requires_approval_block,
    ),

    boundary_assignment: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $._expression),
    ),

    can_block: $ => seq('can', $.block),
    cannot_block: $ => seq('cannot', $.block),
    team_section: $ => seq(
      'team',
      '{',
      repeat($.team_member),
      '}',
    ),

    team_member: $ => seq(
      'val',
      field('name', $.identifier),
      '=',
      'spawn',
      '<',
      field('agent_type', $._type),
      '>',
      '(',
      optional(commaSep1($._argument)),
      ')',
    ),

    on_handler: $ => seq(
      'on',
      '<',
      field('event_type', $._type),
      '>',
      choice($.lambda_expression, $.block),
    ),

    // ======================== Data Entities =========================

    entity_declaration: $ => seq(
      'data',
      'entity',
      field('name', $.identifier),
      optional($.type_parameters),
      '(',
      optional(commaSep1($.field_parameter)),
      ')',
      optional(seq(':', commaSep1($._type))),
      optional(field('body', $.entity_body)),
    ),

    field_parameter: $ => seq(
      repeat($.modifier),
      choice('val', 'var'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(seq('=', field('default', $._expression))),
    ),

    entity_body: $ => seq(
      '{',
      repeat(choice($.invariant_clause, $.function_declaration)),
      '}',
    ),

    invariant_clause: $ => seq('invariant', $.block),

    // ======================== Sealed Classes ========================

    sealed_declaration: $ => seq(
      'sealed',
      'class',
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq(':', field('supertype', $._type))),
      '{',
      repeat($.sealed_member),
      '}',
    ),

    sealed_member: $ => choice(
      $.sealed_data_class,
      $.sealed_object,
    ),

    sealed_data_class: $ => seq(
      'data',
      'class',
      field('name', $.identifier),
      optional($.type_parameters),
      '(',
      optional(commaSep1($.field_parameter)),
      ')',
      optional(seq(':', field('supertype', $._type), '(', ')')),
    ),

    sealed_object: $ => seq(
      'object',
      field('name', $.identifier),
      optional(seq(':', field('supertype', $._type), '(', ')')),
    ),

    // ======================== Interfaces ============================

    interface_declaration: $ => seq(
      'interface',
      field('name', $.identifier),
      optional($.type_parameters),
      optional(seq(':', commaSep1($._type))),
      '{',
      repeat($._interface_member),
      '}',
    ),

    _interface_member: $ => choice(
      $.abstract_field,
      $.function_signature,
      $.function_declaration,
    ),

    abstract_field: $ => seq(
      'val',
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    function_signature: $ => seq(
      'fun',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      ':',
      field('return_type', $._type),
    ),

    // ======================== Type Aliases ==========================

    type_alias: $ => seq(
      'type',
      field('name', $.identifier),
      optional($.type_parameters),
      '=',
      field('type', $._type),
    ),

    // ======================== Diagnosable Classes ===================

    field_declaration: $ => seq(
      choice('val', 'var'),
      field('name', $.identifier),
      ':',
      field('type', $._type),
      optional(choice(
        seq('=', field('value', $._expression)),
        seq('by', field('delegate', $._expression)),
      )),
    ),

    _type: $ => choice(
      $.primitive_type,
      $.type_identifier,
      $.confidence_type,
      $.nullable_type,
      $.union_type,
      $.intersection_type,
      $.nl_type,
      $.generic_type,
      $.tuple_type,
      $.function_type,
      $.parenthesized_type,
    ),

    primitive_type: _ => choice(
      'Int', 'Float', 'String', 'Bool', 'Byte',
      'Unit', 'Any', 'Nothing', 'ID', 'DateTime', 'Boolean',
    ),

    type_identifier: $ => prec.right(1, seq(
      choice($.identifier, $.qualified_identifier),
      optional($.type_arguments),
    )),

    nullable_type: $ => prec.left(PREC.POSTFIX, seq(
      $._type,
      '?',
    )),

    nl_type: $ => prec.right(2, seq(
      'NL',
      optional(seq('<', $.identifier, '>')),
    )),

    generic_type: $ => seq(
      choice('Fuzzy', 'Intent', 'Stream', 'List', 'MutableList',
             'Set', 'Map', 'MutableMap', 'Result'),
      '<',
      commaSep1($._type),
      '>',
    ),

    type_parameters: $ => seq(
      '<',
      commaSep1($.type_parameter),
      '>',
    ),

    type_parameter: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('bound', $._type))),
    ),

    _expression: $ => choice(
      $.identifier,
      $.qualified_identifier,
      $._literal,
      $.this_expression,
      $.self_expression,
      $.parenthesized_expression,
      $.member_expression,
      $.safe_member_expression,
      $.non_null_expression,
      $.call_expression,
      $.index_expression,
      $.confidence_expression_val,
      $.binary_expression,
      $.unary_expression,
      $.postfix_update_expression,
      $.type_check_expression,
      $.type_cast_expression,
      $.safe_cast_expression,
      $.range_expression,
      $.in_expression,
      $.elvis_expression,
      $.semantic_expression,
      $.when_expression,
      $.if_expression,
      $.lambda_expression,
      $.delegate_expression,
      $.parallel_expression,
      $.recall_expression,
      $.ask_expression,
      $.diagnose_expression,
      $.emit_expression,
      $.try_expression,
      $.spawn_expression,
    ),

    member_expression: $ => prec.left(PREC.MEMBER, seq(
      field('object', $._expression),
      '.',
      field('member', $.identifier),
    )),

    safe_member_expression: $ => prec.left(PREC.MEMBER, seq(
      field('object', $._expression),
      '?.',
      field('member', $.identifier),
    )),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $._expression),
      choice(
        seq(
          '(',
          optional(commaSep1($._argument)),
          ')',
          optional(field('trailing_lambda', $.lambda_expression)),
        ),
        field('trailing_lambda', $.lambda_expression),
      ),
    )),

    _argument: $ => choice(
      $.named_argument,
      $._expression,
    ),

    binary_expression: $ => choice(
      ...[
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['%', PREC.MULTIPLICATIVE],
        ['per', PREC.MULTIPLICATIVE],
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['<', PREC.COMPARISON],
        ['>', PREC.COMPARISON],
        ['<=', PREC.COMPARISON],
        ['>=', PREC.COMPARISON],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['matches', PREC.EQUALITY],
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['to', PREC.RANGE],
      ].map(([op, prec_level]) =>
        prec.left(prec_level, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        ))
      ),
    ),

    elvis_expression: $ => prec.right(PREC.ELVIS, seq(
      field('value', $._expression),
      '?:',
      field('fallback', $._expression),
    )),

    when_expression: $ => seq(
      'when',
      optional(seq('(', field('subject', $._expression), ')')),
      '{',
      repeat($.when_branch),
      '}',
    ),

    when_branch: $ => choice(
      seq(
        field('condition', $.when_condition),
        '->',
        field('body', choice($._expression, $.block)),
      ),
      seq(
        'else',
        '->',
        field('body', choice($._expression, $.block)),
      ),
    ),

    when_condition: $ => choice(
      seq('is', $._type, optional(seq('@', $.confidence_expression))),
      $._expression,
    ),

    if_expression: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $._expression),
      ')',
      field('consequence', choice($.block, $._expression)),
      optional(seq(
        'else',
        field('alternative', choice($.if_expression, $.block, $._expression)),
      )),
    )),

    lambda_expression: $ => seq(
      '{',
      optional(seq($.lambda_parameters, '->')),
      repeat($._statement),
      '}',
    ),

    lambda_parameters: $ => commaSep1($.lambda_parameter),

    lambda_parameter: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
    ),

    string_template: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.template_substitution,
        $.simple_substitution,
        $.escape_sequence,
      )),
      '"',
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\$]+/)),
    _statement: $ => choice(
      $.val_declaration,
      $.var_declaration,
      $.assignment_statement,
      $.return_statement,
      $.for_statement,
      $.while_statement,
      $.expression_statement,
    ),

    val_declaration: $ => seq(
      'val',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    var_declaration: $ => seq(
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
    ),

    assignment_statement: $ => prec.right(seq(
      field('target', $._expression),
      '=',
      field('value', $._expression),
    )),

    return_statement: $ => prec.right(seq(
      'return',
      optional(field('value', $._expression)),
    )),

    for_statement: $ => seq(
      'for',
      '(',
      field('variable', $.identifier),
      'in',
      field('iterable', $._expression),
      ')',
      field('body', $.block),
    ),

    int_literal: _ => token(/[0-9][0-9_]*/),
